// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for type: alphabetically and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
  color: #FBFCFF;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  transform: translate(-100%,0) !important;
}"
`;

exports[`getComponentCss() should return correct css for type: alphabetically and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
  color: #010205;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',lower-latin) var(--p-internal-text-list-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  transform: translate(-100%,0) !important;
}"
`;

exports[`getComponentCss() should return correct css for type: numbered and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
  color: #FBFCFF;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  transform: translate(-100%,0) !important;
}"
`;

exports[`getComponentCss() should return correct css for type: numbered and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-ordered-padding-left,1.5rem);
  list-style-type: none;
  color: #010205;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}
::slotted(*)::before {
  content: counters(p-text-list-counter,'.',decimal) var(--p-internal-text-list-pseudo-suffix,'.') !important;
  counter-increment: p-text-list-counter !important;
  position: absolute !important;
  top: 0 !important;
  left: 0 !important;
  transform: translate(-100%,0) !important;
}"
`;

exports[`getComponentCss() should return correct css for type: unordered and theme: dark 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-unordered-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
  color: #FBFCFF;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}"
`;

exports[`getComponentCss() should return correct css for type: unordered and theme: light 1`] = `
":host {
  display: block;
  counter-reset: p-text-list-counter !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
ol,ul {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  padding: var(--p-internal-text-list-padding-top,0) 0 var(--p-internal-text-list-padding-bottom,0) var(--p-internal-text-list-unordered-padding-left,.375rem);
  list-style-type: var(--p-internal-text-list-list-style-type,'•');
  color: #010205;
}
::slotted(*) {
  --p-internal-text-list-padding-top: 4px !important;
  --p-internal-text-list-padding-bottom: 16px !important;
  --p-internal-text-list-ordered-padding-left: 2rem !important;
  --p-internal-text-list-unordered-padding-left: .625rem !important;
  --p-internal-text-list-list-style-type: "–" !important;
}"
`;
